<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInformationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_general_activity"
    android:orientation="vertical"
    android:id="@+id/topLayout"
    >

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="@dimen/text_title"
    android:text="@string/confirm_data"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/primary_text"
            android:layout_marginStart="@dimen/margin_general_elements"
            android:textSize="@dimen/text_normal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:textColor="@color/primary_text"
            android:layout_marginStart="@dimen/margin_general_elements"
            android:textSize="@dimen/text_normal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:id="@+id/phone"
            android:layout_marginStart="@dimen/margin_general_elements"
            android:textSize="@dimen/text_normal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textColor="@color/primary_text"
            android:layout_marginStart="@dimen/margin_general_elements"
            android:textSize="@dimen/text_normal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textColor="@color/primary_text"
            android:layout_marginStart="@dimen/margin_general_elements"
            android:textSize="@dimen/text_normal"/>


    </LinearLayout>



</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:text="@string/edit_data"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/icons"
        android:id="@+id/edit"
        android:layout_marginBottom="@dimen/margin_button_bottom"
        />

</RelativeLayout>