<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context=".AddContactActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/btn_height"
    tools:context=".AddContactActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_general_activity"
    android:layout_marginStart="@dimen/margin_general_activity"
    android:layout_marginEnd="@dimen/margin_general_activity"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:id="@+id/name"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_normal"
        android:text="@string/birthday"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_general_elements"

        />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:theme="@style/DatePicker"
        android:id="@+id/datepicker"
         />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:inputType="phone"
            android:id="@+id/phone"
            android:hint="@string/phone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_general_elements"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            android:id="@+id/contact_description"
            android:inputType="text"
            android:hint="@string/description"/>

    </android.support.design.widget.TextInputLayout>



</LinearLayout>
</ScrollView>

<Button
android:layout_width="match_parent"
android:layout_height="@dimen/btn_height"
android:text="@string/next"
android:layout_marginTop="@dimen/margin_general_elements"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/margin_button_bottom"
    android:background="@color/colorPrimary"
    android:textColor="@color/icons"
    android:id="@+id/next"
    />
</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>